2022-07-24  Jay Berkenbilt  <ejb@ql.org>

        * QPDFObjectHandle: for the methods insertItem, appendItem,
        eraseItem, replaceKey, and removeKey, add a corresponding
        "AndGetNew" and/or "AndGetOld" methods. The ones that end with
        "AndGetNew" return the newly added item. The ones that end with
        "AndGetOld" return the old value. The AndGetNew methods make it
        possible to create a new object, add it to an array or dictionary,
        and get a handle to it all in one line. The AndGetOld methods make
        it easier to retrieve an old value when removing or replacing it.

        * Thanks to m-holger for doing significant cleanup of private APIs
        and internals around QPDFObjGen and for significantly improving
        the performance of QPDFObjGen -- See #731. This includes a few
        user-visible changes:
        - Addition of QPDFObjectHandle::StreamDataProvider::provideStreamData
          overloads that take QPDFObjGen
        - Addition of an optional argument to QPDFObjGen::unparse allowing
          specification of a separator character, with the default
          resulting in the old behavior
        Examples have been updated to use improved APIs. The old
        provideStreamData overloads will continue to be supported, so
        updating older code to use the new interfaces is entirely at the
        programmer's descretion.

2022-06-25  Jay Berkenbilt  <ejb@ql.org>

        * Add tracking methods QPDF::everCalledGetAllPages() and
        QPDF::everPushedInheritedAttributesToPages(). Since those methods
        may have the side effect of creating new objects and replace
        objects in various places in the pages tree, it's useful to be
        able to find out whether they've ever been called.

2022-06-18  Jay Berkenbilt  <ejb@ql.org>

        * Add QPDFJob::registerProgressReporter, making it possible to
        override the progress reporter that is used when --progress (or